--- a/src/Application/project.lock.json
+++ b/src/Application/project.lock.json
@@ -1067,6 +1067,19 @@
         "runtime": {
           "lib/netstandard1.3/System.Xml.XDocument.dll": {}
         }
+      },
+      "Domain/1.0.0": {
+        "type": "project",
+        "framework": ".NETStandard,Version=v1.6",
+        "dependencies": {
+          "NETStandard.Library": "1.6.0"
+        },
+        "compile": {
+          "netstandard1.6/Domain.dll": {}
+        },
+        "runtime": {
+          "netstandard1.6/Domain.dll": {}
+        }
       }
     }
   },
@@ -4013,10 +4026,16 @@
         "ref/xamarintvos10/_._",
         "ref/xamarinwatchos10/_._"
       ]
+    },
+    "Domain/1.0.0": {
+      "type": "project",
+      "path": "../Domain/project.json",
+      "msbuildProject": "../Domain/Domain.xproj"
     }
   },
   "projectFileDependencyGroups": {
     "": [
+      "Domain >= 1.0.0-*",
       "NETStandard.Library >= 1.6.0"
     ],
     ".NETStandard,Version=v1.6": []
