--- a/src/RoleManage/bower.json
+++ b/src/RoleManage/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "bootstrap": "3.3.6",
     "font-awesome": "4.6.1",
-    "iCheck": "1.0.2"
+    "iCheck": "1.0.2",
+    "layer": "3.0.1",
+    "jquery.cookie":"1.4.1"
   }
 }
